tests/snapshots/file@class@inherited_method.lox.snap
---
source: tests/common/mod.rs
description: "class Foo {\n  inFoo() {\n    print \"in foo\";\n  }\n}\n\nclass Bar < Foo {\n  inBar() {\n    print \"in bar\";\n  }\n}\n\nclass Baz < Bar {\n  inBaz() {\n    print \"in baz\";\n  }\n}\n\nvar baz = Baz();\nbaz.inFoo(); // expect: in foo\nbaz.inBar(); // expect: in bar\nbaz.inBaz(); // expect: in baz\n"
input_file: crafting_interpreters_test_files/class/inherited_method.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × expected RBrace, found 'ident'
   ╭─[2:3]
 1 │ class Foo {
 2 │   inFoo() {
   ·   ──┬──
   ·     ╰── here
 3 │     print "in foo";
   ╰────
Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false', found '}'
   ╭─[4:3]
 3 │     print "in foo";
 4 │   }
   ·   ┬
   ·   ╰── here
 5 │ }
   ╰────
Error:   × expected LBrace, found '<'
   ╭─[7:11]
 6 │ 
 7 │ class Bar < Foo {
   ·           ┬
   ·           ╰── here
 8 │   inBar() {
   ╰────
Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false', found '}'
    ╭─[10:3]
  9 │     print "in bar";
 10 │   }
    ·   ┬
    ·   ╰── here
 11 │ }
    ╰────
Error:   × expected LBrace, found '<'
    ╭─[13:11]
 12 │ 
 13 │ class Baz < Bar {
    ·           ┬
    ·           ╰── here
 14 │   inBaz() {
    ╰────
Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false', found '}'
    ╭─[16:3]
 15 │     print "in baz";
 16 │   }
    ·   ┬
    ·   ╰── here
 17 │ }
    ╰────
